[package]
name = "sim800"
license = "MIT"
version = "0.0.2"
edition = "2021"
description = "sim800 is a crate allowing for a good level of abstraction between SIM800 series modem (SIM800L, SIM800H), project development begins Q2 2023"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
